src/ir/tests/snapshots/fern__ir__tests__lower__shadowing.snap
---
source: src/ir/tests/lower.rs
expression: program.program()
---
Program {
    structs: [],
    globals: [],
    functions: [
        Function {
            parameters: 0,
            result: None,
            values: [
                Value {
                    span: None,
                    ty: Scalar(
                        Int,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                0,
                            ),
                        ),
                    ),
                },
                Value {
                    span: None,
                    ty: Scalar(
                        Int,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                1,
                            ),
                        ),
                    ),
                },
            ],
            flow: ControlFlow {
                entry: BlockId(
                    0,
                ),
                locals: [
                    Scalar(
                        Int,
                    ),
                    Scalar(
                        Int,
                    ),
                    Scalar(
                        Int,
                    ),
                ],
                blocks: [
                    Block {
                        instructions: [
                            Store {
                                place: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                operand: Literal(
                                    Integer {
                                        value: 42,
                                        ty: Int,
                                    },
                                ),
                            },
                            Value(
                                ValueId(
                                    0,
                                ),
                            ),
                            Store {
                                place: Local(
                                    LocalId(
                                        1,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        0,
                                    ),
                                ),
                            },
                            Store {
                                place: Local(
                                    LocalId(
                                        2,
                                    ),
                                ),
                                operand: Literal(
                                    Integer {
                                        value: 7,
                                        ty: Int,
                                    },
                                ),
                            },
                            Value(
                                ValueId(
                                    1,
                                ),
                            ),
                        ],
                        terminator: Exit {
                            status: Value(
                                ValueId(
                                    1,
                                ),
                            ),
                        },
                    },
                ],
            },
        },
    ],
    main: FunctionId(
        0,
    ),
}
