src/ir/tests/snapshots/fern__ir__tests__lower__short_circuit_control_flow.snap
---
source: src/ir/tests/lower.rs
expression: program.program()
---
Program {
    structs: [],
    globals: [],
    functions: [
        Function {
            parameters: 0,
            result: None,
            values: [
                Value {
                    span: None,
                    ty: Scalar(
                        Bool,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                1,
                            ),
                        ),
                    ),
                },
                Value {
                    span: None,
                    ty: Scalar(
                        Int,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                0,
                            ),
                        ),
                    ),
                },
                Value {
                    span: Some(
                        127..129,
                    ),
                    ty: Scalar(
                        Bool,
                    ),
                    kind: Comparison {
                        operator: NotEqual,
                        left: Value(
                            ValueId(
                                1,
                            ),
                        ),
                        right: Literal(
                            Integer {
                                value: 0,
                                ty: Int,
                            },
                        ),
                    },
                },
                Value {
                    span: None,
                    ty: Scalar(
                        Bool,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                2,
                            ),
                        ),
                    ),
                },
                Value {
                    span: None,
                    ty: Scalar(
                        Int,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                0,
                            ),
                        ),
                    ),
                },
                Value {
                    span: Some(
                        138..139,
                    ),
                    ty: Scalar(
                        Int,
                    ),
                    kind: Binary {
                        operator: Divide,
                        form: Infix,
                        left: Literal(
                            Integer {
                                value: 10,
                                ty: Int,
                            },
                        ),
                        right: Value(
                            ValueId(
                                4,
                            ),
                        ),
                    },
                },
                Value {
                    span: Some(
                        148..149,
                    ),
                    ty: Scalar(
                        Bool,
                    ),
                    kind: Comparison {
                        operator: Greater,
                        left: Value(
                            ValueId(
                                5,
                            ),
                        ),
                        right: Literal(
                            Integer {
                                value: 1,
                                ty: Int,
                            },
                        ),
                    },
                },
                Value {
                    span: None,
                    ty: Scalar(
                        Bool,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                3,
                            ),
                        ),
                    ),
                },
            ],
            flow: ControlFlow {
                entry: BlockId(
                    0,
                ),
                locals: [
                    Scalar(
                        Int,
                    ),
                    Scalar(
                        Bool,
                    ),
                    Scalar(
                        Bool,
                    ),
                    Scalar(
                        Bool,
                    ),
                ],
                blocks: [
                    Block {
                        instructions: [
                            Store {
                                place: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                operand: Literal(
                                    Integer {
                                        value: 0,
                                        ty: Int,
                                    },
                                ),
                            },
                            Store {
                                place: Local(
                                    LocalId(
                                        1,
                                    ),
                                ),
                                operand: Literal(
                                    Integer {
                                        value: 1,
                                        ty: Bool,
                                    },
                                ),
                            },
                            Value(
                                ValueId(
                                    0,
                                ),
                            ),
                        ],
                        terminator: Branch {
                            condition: Value(
                                ValueId(
                                    0,
                                ),
                            ),
                            then_target: BlockId(
                                1,
                            ),
                            else_target: BlockId(
                                2,
                            ),
                        },
                    },
                    Block {
                        instructions: [
                            Value(
                                ValueId(
                                    1,
                                ),
                            ),
                            Value(
                                ValueId(
                                    2,
                                ),
                            ),
                            Store {
                                place: Local(
                                    LocalId(
                                        2,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        2,
                                    ),
                                ),
                            },
                        ],
                        terminator: Jump {
                            target: BlockId(
                                3,
                            ),
                        },
                    },
                    Block {
                        instructions: [
                            Store {
                                place: Local(
                                    LocalId(
                                        2,
                                    ),
                                ),
                                operand: Literal(
                                    Integer {
                                        value: 0,
                                        ty: Bool,
                                    },
                                ),
                            },
                        ],
                        terminator: Jump {
                            target: BlockId(
                                3,
                            ),
                        },
                    },
                    Block {
                        instructions: [
                            Value(
                                ValueId(
                                    3,
                                ),
                            ),
                        ],
                        terminator: Branch {
                            condition: Value(
                                ValueId(
                                    3,
                                ),
                            ),
                            then_target: BlockId(
                                4,
                            ),
                            else_target: BlockId(
                                5,
                            ),
                        },
                    },
                    Block {
                        instructions: [
                            Value(
                                ValueId(
                                    4,
                                ),
                            ),
                            Value(
                                ValueId(
                                    5,
                                ),
                            ),
                            Value(
                                ValueId(
                                    6,
                                ),
                            ),
                            Store {
                                place: Local(
                                    LocalId(
                                        3,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        6,
                                    ),
                                ),
                            },
                        ],
                        terminator: Jump {
                            target: BlockId(
                                6,
                            ),
                        },
                    },
                    Block {
                        instructions: [
                            Store {
                                place: Local(
                                    LocalId(
                                        3,
                                    ),
                                ),
                                operand: Literal(
                                    Integer {
                                        value: 0,
                                        ty: Bool,
                                    },
                                ),
                            },
                        ],
                        terminator: Jump {
                            target: BlockId(
                                6,
                            ),
                        },
                    },
                    Block {
                        instructions: [
                            Value(
                                ValueId(
                                    7,
                                ),
                            ),
                        ],
                        terminator: Branch {
                            condition: Value(
                                ValueId(
                                    7,
                                ),
                            ),
                            then_target: BlockId(
                                7,
                            ),
                            else_target: BlockId(
                                8,
                            ),
                        },
                    },
                    Block {
                        instructions: [],
                        terminator: Exit {
                            status: Literal(
                                Integer {
                                    value: 1,
                                    ty: Int,
                                },
                            ),
                        },
                    },
                    Block {
                        instructions: [],
                        terminator: Jump {
                            target: BlockId(
                                9,
                            ),
                        },
                    },
                    Block {
                        instructions: [],
                        terminator: Exit {
                            status: Literal(
                                Integer {
                                    value: 0,
                                    ty: Int,
                                },
                            ),
                        },
                    },
                ],
            },
        },
    ],
    main: FunctionId(
        0,
    ),
}
